--- a/Part_3/phonebook/package.json
+++ b/Part_3/phonebook/package.json
@@ -8,10 +8,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --watch index.js",
-    "start" :"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "morgan": "^1.10.1"
   }
 }
