--- a/Part_4/package.json
+++ b/Part_4/package.json
@@ -8,8 +8,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node --watch index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "node --test"
   },
   "dependencies": {
     "dotenv": "^17.2.2",
