--- a/Part_4/package.json
+++ b/Part_4/package.json
@@ -7,9 +7,11 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development node --watch index.js",
+    "test": "cross-env NODE_ENV=test node --test",
     "lint": "eslint .",
-    "test": "node --test"
+    "lintfix": "eslint . --fix"
   },
   "dependencies": {
     "dotenv": "^17.2.2",
@@ -18,6 +20,8 @@
     "mongoose": "^8.18.0"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin-js": "^4.4.1"
+    "@stylistic/eslint-plugin-js": "^4.4.1",
+    "cross-env": "^10.0.0",
+    "supertest": "^7.1.4"
   }
 }
