--- a/Part_4/package.json
+++ b/Part_4/package.json
@@ -14,6 +14,7 @@
     "lintfix": "eslint . --fix"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
     "eslint": "^9.34.0",
     "express": "^5.1.0",
